# RigoPanel

./: .gitignore  README.md
rpanel-backend/: Cargo.toml
rpanel-backend/crates/rpanel-api/: Cargo.toml
rpanel-backend/crates/rpanel-api/src/: lib.rs
rpanel-backend/crates/rpanel-bin/: Cargo.toml
rpanel-backend/crates/rpanel-bin/src/: collector.rs  config.rs  main.rs  server.rs
rpanel-backend/crates/rpanel-collector-sys/: Cargo.toml
rpanel-backend/crates/rpanel-collector-sys/src/: lib.rs
rpanel-backend/crates/rpanel-core/: Cargo.toml
rpanel-backend/crates/rpanel-core/src/: lib.rs
rpanel-backend/scripts/: run-dev.sh
rpanel-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  unocss.config.ts  vite.config.ts
rpanel-frontend/src/: app.tsx  main.tsx  types.ts  types.ts.save
rpanel-frontend/src/api/: mockMetrics.ts
rpanel-frontend/src/components/: ResourceCard.tsx  Sidebar.tsx  Sparkline.tsx  Topbar.tsx
rpanel-frontend/src/pages/: Overview.tsx
rpanel-frontend/src/styles/: theme.css
rpanel-frontend/src/utils/: format.ts
