[workspace]
members = ["crates/rpanel-core", "crates/rpanel-collector-sys", "crates/rpanel-api", "crates/rpanel-bin"]
resolver = "2"

[workspace.package]
edition = "2024"     # ← 统一 2024
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
parking_lot = "0.12"
bytesize = "1"
tokio-util = "0.7"
rustix = { version = "1", default-features = false, features = ["fs"] }
